--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" type="text/css" href="styles/style.css">
+  <link rel="stylesheet" type="text/css" href="styles/responsive.css">
   <link rel="icon" type="image/png" sizes="32x32" href="./assets/favicon-32x32.png">
   
   <title>Frontend Mentor | Meet landing page</title>
@@ -27,7 +28,6 @@
     <img src="assets/desktop/image-hero-right.png" alt="" aria-disabled="true" class="desktopHero" id="right">
   </header>
 
-  <img src="assets/circle1.png" alt="01" id="circle2">
 
   <article>
     <div id="imageGallery">
@@ -46,13 +46,14 @@
     </div>
   </article>
 
-  <img src="assets/circle2.png" alt="02">
+  <img src="assets/circle2.png" alt="02" id="circle2">
 
   <footer>
-    <h2>Experience more together</h2>
-    <p>Stay connected with reliable HD meetings and unlimited one-on-one and group video sessions.</p>
-
-    <div id="downloadbtn-purple" class="button">Download <span class="version">v1.3</span></div>
+    <div>
+      <h2>Experience more together</h2>
+      <p>Stay connected with reliable HD meetings and unlimited one-on-one and group video sessions.</p>
+      <div id="downloadbtn-purple" class="button">Download <span class="version">v1.3</span></div>
+    </div>
   </footer>
 </body>
 </html>
