--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
     <img src="assets/desktop/image-hero-right.png" alt="" aria-disabled="true" class="desktopHero" id="right">
   </header>
 
+  <img src="assets/circle1.png" alt="01" id="circle1">
 
   <article>
     <div id="imageGallery">
